@@ -27,7 +27,7 @@ buildscript{
 
 plugins{
     id "org.jetbrains.kotlin.jvm" version "1.6.21"
-    id "org.jetbrains.kotlin.kapt" version "1.6.21"
+    id "org.jetbrains.kotlin.kapt" version "1.6.21" apply false
 }
 
 allprojects{
@@ -287,18 +287,10 @@ project(":ios"){
 }
 
 project(":core"){
-    apply plugin: "java-library"
     apply plugin: "kotlin"
     apply plugin: "kotlin-kapt"
 
-    kapt{
-        javacOptions{
-            option("-source", "16")
-            option("-target", "1.8")
-        }
-    }
-
-    compileJava.options.fork = true
+    compileJava.options.fork = false
 
     task preGen{
         outputs.upToDateWhen{ false }
@@ -358,13 +350,23 @@ project(":core"){
 
     kapt {
         keepJavacAnnotationProcessors = true
-//        javacOptions {
-//            option("-source", "8")
-//        }
+        javacOptions{
+            option("-source", "16")
+            option("-target", "8")
+        }
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.internal.KaptWithoutKotlincTask.class).configureEach {
-        kaptProcessJvmArgs.add('--source=8')
+        kaptProcessJvmArgs.addAll([
+                '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+        ])
     }
 
     dependencies{
@@ -393,7 +395,6 @@ project(":core"){
         implementation 'commons-net:commons-net:3.8.0'
 //        runtimeOnly "org.jetbrains.kotlin:kotlin-scripting-jsr223:1.6.21"
 
-        annotationProcessor 'com.github.Anuken:jabel:0.6.0'
         compileOnly project(":annotations")
         if (!project.hasProperty("noKapt")) kapt project(":annotations")
     }
@@ -475,7 +476,7 @@ project(":tools"){
 }
 
 configure(project(":annotations")){
-    apply plugin: "java-library"
+    apply plugin: "kotlin"
 
     tasks.withType(JavaCompile){
         targetCompatibility = 8
